fixed settings labels too close to sliders

--- a/public/stylesheets/less/rp-settings.less
+++ b/public/stylesheets/less/rp-settings.less
@@ -14,6 +14,6 @@
     color: @light-text-color;
     text-align: left;
 }
-.rp-settings-inset {
-    width: 100% !important;
+.rp-setting-inset {
+    min-width: 60%;
 }
